chore: Fix most of the builds, drop jdk18 playground
# Conflicts:
#	gradle/libs.versions.toml